--- a/templates/404.html
+++ b/templates/404.html
@@ -254,7 +254,7 @@
         <h1>
             404
         </h1>
-        <p>$ не найдено 404.<span class="animate__animated animate__flash handle"></span></p>
+        <p>$ не найдено.<span class="animate__animated animate__flash handle"></span></p>
     </div>
 </div>
 </body>
