--- a/templates/wallet_1_squad.html
+++ b/templates/wallet_1_squad.html
@@ -21,15 +21,15 @@
         .symbol {
             width: 100px;
             height: 100px;
-            border-radius: 0%;
+            border-radius: 0;
             background-image: url('../static/images/no_image.png');
             background-size: 100px 100px;
             background-repeat: no-repeat;
-            image-rendering: optimizeSpeed; /* STOP SMOOTHING, GIVE ME SPEED  */
-            image-rendering: -moz-crisp-edges; /* Firefox                        */
-            image-rendering: -o-crisp-edges; /* Opera                          */
-            image-rendering: pixelated; /* Universal support since 2021   */
-            -ms-interpolation-mode: nearest-neighbor; /* IE8+                           */
+            image-rendering: optimizeSpeed;
+            image-rendering: -moz-crisp-edges; /* Firefox */
+            image-rendering: -o-crisp-edges; /* Opera */
+            image-rendering: pixelated; /* Universal support since 2021 */
+            -ms-interpolation-mode: nearest-neighbor; /* IE8+ */
 
 
             margin: 20px auto;
