--- a/templates/wallet_5_old.html
+++ b/templates/wallet_5_old.html
@@ -6,6 +6,11 @@
     <script src="../static/js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}"/>
     <style>
+        @font-face {
+            font-family: AireExterior;
+            src: url('static/fonts/AireExterior.ttf');
+        }
+
         html, body {
             background: #ffffff;
             height: 100%;
@@ -25,6 +30,13 @@
             align-items: center;
         }
 
+        .vympel {
+            font-family: "AireExterior", sans-serif;
+            width: 50%;
+            margin-left: auto;
+            margin-right: auto;
+            color: #000000;
+        }
     </style>
 </head>
 <body>
