--- a/templates/squad_wallet.html
+++ b/templates/squad_wallet.html
@@ -22,7 +22,7 @@
             width: 100px;
             height: 100px;
             border-radius: 0;
-            background-image: url('../static/images/no_image.png');
+            background-image: url('../static/images/{{ logo }}');
             background-size: 100px 100px;
             background-repeat: no-repeat;
             image-rendering: optimizeSpeed;
@@ -68,21 +68,21 @@
 <body>
 <div class="profile">
     <div class="symbol"></div>
-    <h1>1 отряд</h1>
-    <p class="slogan">Мы рождены, чтоб сказку сделать былью</p>
+    <h1>{{ squad }} отряд</h1>
+    <p class="slogan">{{ slogan }}</p>
 
     <div class="info">
         <div class="members">
             <span>Дата регистрации:</span>
-            <span>02.07.2023 г.</span>
+            <span>{{ registration_date }} г.</span>
         </div>
         <div class="members">
-            <span>Количество человек:</span>
-            <span>10 человек</span>
+            <span>Состав:</span>
+            <span>{{ squad_size }} человек</span>
         </div>
         <div class="balance">
             <span>Баланс:</span>
-            <div id="squad_1">загрузка...</div>
+            <div id="squad_{{ squad }}">{{ balance }}</div>
         </div>
     </div>
 </body>
