--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="modal-body">
                         <label for="message-text" class="col-form-label">нажми для выбора ⬇️</label>
-                        <select name="song" class="form-select w-100" multiple aria-label="multiple select example">
+                        <select name="song" class="form-select w-100" multiple required aria-label="multiple select example">
                             {% for song in data %}
                                 <option>{{ song[0] }}</option>
                             {% endfor %}
