--- a/templates/karaoke.html
+++ b/templates/karaoke.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Доступ в интернет</title>
+    <title>скачать караоке</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <style>
@@ -70,7 +70,7 @@
         <div class="col-xs-12 col-md-4 offset-md-4">
             <form method="POST">
                 <div class="form-group">
-                    <input class="form-control" id="password" name="password">
+                    <input class="form-control" name="query">
                 </div>
                 <div class="form-group text-center">
                     <button class="btn btn-dark" type="submit">
