--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>Не найдено</title>
+    <title>не найдено</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='/css/animate.min.css') }}">
     <style>
         .center-xy {
