--- a/templates/internet.html
+++ b/templates/internet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Доступ в интернет</title>
+    <title>доступ в интернет</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <style>
