--- a/templates/404.html
+++ b/templates/404.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <title>не найдено</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='/css/animate.min.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
     <style>
         .center-xy {
             top: 50%;
