--- a/templates/karaoke.html
+++ b/templates/karaoke.html
@@ -4,6 +4,7 @@
     <title>скачать караоке</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
     <style>
         body {
             display: flex;
