--- a/templates/squad_wallet.html
+++ b/templates/squad_wallet.html
@@ -7,6 +7,7 @@
     <script src="../static/js/jquery.min.js"></script>
     <script type="text/javascript" src="../static/js/socket.io.min.js"></script>
     <script src="../static/js/script.js"></script>
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
