--- a/templates/wallet_5_old.html
+++ b/templates/wallet_5_old.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="../static/js/socket.io.min.js"></script>
     <script src="../static/js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}"/>
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
     <style>
         @font-face {
             font-family: AireExterior;
