--- a/templates/download_photo.html
+++ b/templates/download_photo.html
@@ -66,7 +66,7 @@
 </head>
 <body>
 <div class="container">
-    <h3 class="mb-3 align-center">загрузка фото</h3>
+    <h3 class="mb-3 align-center">загрузка фото и видео</h3>
 
     <ul>
         {% if folders|length == 0 and files|length == 0     %}
