--- a/templates/index.html
+++ b/templates/index.html
@@ -124,13 +124,14 @@
                 <li><a href="{{ url_for('wallet') }}">баланс отрядов</a></li>
                 <li><a data-toggle="modal" data-target="#anonMessage"
                        href="https://getbootstrap.com/docs/4.6/getting-started/build-tools">сообщение в рубку</a></li>
-                <li><a href="{{ url_for('download_photo') }}">загрузка фотографий</a></li>
+                <li><a href="{{ url_for('download_photo') }}">загрузка фото и видео</a></li>
                 {% if is_ph or is_admin %}
                     </ul>
                     </div>
                     <div class="col-md-6">
                     <ul class="icon-list">
                     <li><a href="/" onclick="handleLinkClick(event)">выгрузить фото</a></li>
+                    <li><a href="/" onclick="resetButtons(event)">сбросить кнопки</a></li>
                 {% endif %}
                 {% if is_admin %}
                     <li><a href="{{ url_for('karaoke') }}">караоке</a></li>
@@ -160,6 +161,15 @@
             xhr.send();
 
             alert("фото начали выгружаться!");
+        }
+        function resetButtons(event) {
+            // предотвращаем переход по ссылке по умолчанию
+            event.preventDefault();
+
+            // отправляем на бэкэнд
+            var xhr = new XMLHttpRequest();
+            xhr.open("POST", "/reset-buttons", true);
+            xhr.send();
         }
 
     </script>
